OPENIDM-3726, OPENIDM-3712, OPENIDM-3728, OPENIDM-3729, OPENIDM-3734 - A series of minor ui fixes (adjusting heads, fixing bad links, fixing spacing issues, and restoring self-service tab.

--- a/openidm-ui/openidm-ui-admin/src/main/resources/css/config/workflowView.less
+++ b/openidm-ui/openidm-ui-admin/src/main/resources/css/config/workflowView.less
@@ -176,9 +176,9 @@
 }
 
 img.diagramImage {
-    max-width: 97%;
-    margin-top: 50px;
-    margin-bottom: 50px;
+  max-width: 97%;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 
@@ -188,43 +188,47 @@ img.diagramImage {
 
 @media (max-width: 899px) {
 
-  tbody>tr:first-of-type .smallScreenCell{
-    border-top: none;
-  }
-
-  thead {
-    display: none;
-  }
-  
-  td.smallScreenCell {
-    a {
-      color: #2a2f32;
-      cursor: pointer;
+  .backgrid-table {
+    tbody > tr:first-of-type .smallScreenCell {
+      border-top: none;
     }
-  }
 
-  th:not(.smallScreenCell), td:not(.smallScreenCell) {
-    display: none;
-    border: none;
+    thead {
+      display: none;
+    }
+
+    td.smallScreenCell {
+      a {
+        color: #2a2f32;
+        cursor: pointer;
+      }
+    }
+
+    th:not(.smallScreenCell), td:not(.smallScreenCell) {
+      display: none;
+      border: none;
+    }
   }
 }
 
 @media (min-width: 900px) {
-  .smallScreenCell {
-    display: none;
-  }
+  .backgrid-table {
+    .smallScreenCell {
+      display: none;
+    }
 
-  thead {
-    display: table-header-group;
-  }
+    thead {
+      display: table-header-group;
+    }
 
-  th:not(.smallScreenCell), td:not(.smallScreenCell) {
-    display: table-cell;
-    border-bottom: 1px solid #eee;
-    
-    a {
-      color: #2a2f32;
-      cursor: pointer;
+    th:not(.smallScreenCell), td:not(.smallScreenCell) {
+      display: table-cell;
+      border-bottom: 1px solid #eee;
+
+      a {
+        color: #2a2f32;
+        cursor: pointer;
+      }
     }
   }
 }
